[build-system]
requires = ["setuptools>=42", "wheel", "numpy", "requests==2.27.1", "arxivscraper==0.0.5", "pandas==1.4.2", "PyPDF2==3.0.1", "transformers==4.29.1", "scikit-learn==1.2.2", "nltk==3.8.1", "textract==1.6.5", "datefinder==0.7.3"]
build-backend = "setuptools.build_meta"


[build-system]
requires = ["setuptools>=42", "wheel", "numpy","scikit-learn==1.1.1","scikit-optimize==0.9.0","astropy==5.0.4","scipy==1.7.3","peakutils==1.3.3", "progress==1.6","matplotlib==3.5.1","optuna==3.1.0","boruta==0.3","xgboost==1.6.1","BorutaShap==1.0.16","scikit-plot==0.3.7","opencv-python==4.7.0.68","pandas==1.4.1","tensorflow==2.9.1","imbalanced-learn == 0.10.1"]
build-backend = "setuptools.build_meta"